fixed blurrines

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ h1 {
   text-align: center;
 }
 canvas {
-  border: 2px red solid;
   margin: 0 10rem;
   object-fit: contain;
 }
